5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1822_1641.log
== TEST (2019-06-13 10:31:39) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = zeros(n, dtype=int)

for i in range(size(v)):
	if i % 3 ==0:
		v1[i] = v1[i] + 1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:32:37) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = zeros(3, dtype=int)

for i in range(size(v)):
	if i % 3 ==0:
		v1[i] = v1[i] + 1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:32) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = zeros(3, dtype=int)

for i in range(size(v)):
	if i % 3 ==0:
		v1[i] = v1[i] + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:40) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = zeros(10, dtype=int)

for i in range(size(v)):
	if i % 3 ==0:
		v1[i] = v1[i] + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:56) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = zeros(10, dtype=int)

for i in range(size(v)):
	if i % 3 ==0:
		v1[i] = v1[i] + 1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:28) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3 ==0:
		v1[i] = v1[i] + 1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:08) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3 ==0:
		v1 = v1 + 1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:31) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3 ==0:
print(v1)

-- ERROR:
File "XXXX", line 7
    print(v1)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:34) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3 ==0:
	print(v1)

-- ERROR:
File "XXXX", line 7
    print(v1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:37) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3 ==0:
		print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:32) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3 ==0:
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:39) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3 ==0:
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:44) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3 ==0:
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:42:42) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3 ==0:
		v1 = v1 + 1
		print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:00) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3 ==0:
		
		print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:16) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in range(size(v)):
	if i % 3==0:		
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:40) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in v:
	if i % 3 ==0:		
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:53) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = 0

for i in v:
	if i % 3 ==0:		
		print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:44:00) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = i

for i in v:
	if i % 3 ==0:		
		print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:44:12) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
v1 = i
i = 0
for i in v:
	if i % 3 ==0:		
		print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:44:27) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))
i = 0
v1 = i

for i in v:
	if i % 3 ==0:		
		print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:08) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	if i % 3 ==0:		
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:35) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	indice = 0
	if i % 3 ==0:		
		print(indice)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:49) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	indice = 0
	if i % 3 ==0:		
		indice = indice + 1
		print(indice)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:01) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	indice = 0
	if i % 3 ==0:		
		indice = indice + 1
		print(indice)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:52) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	indice = 0
	if i % 3 ==0:		
		indice = indice + 1
		print(indice)
v1 = zeros(i,dtype=int)
for j in v:
	j = j +1
print(j)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:48:04) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	indice = 0
	if i % 3 ==0:		
		indice = indice + 1
		print(indice)
v1 = zeros(i,dtype=int)
for j in v:
	j = j +1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:48:18) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	indice = 0
	if i % 3 ==0:		
		indice = indice + 1
		print(indice)
v1 = zeros(indice,dtype=int)
for j in v:
	j = j +1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:48:39) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	indice = 0
	if i % 3 ==0:		
		indice = indice + 1
		print(indice)
v1 = zeros(indice,dtype=int)
for j in v:
	j = j +1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:49:23) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	k = 0
	if i % 3 ==0:		
		k= k + 1
		print(k)
v1 = zeros(indice,dtype=int)
for j in v:
	j = j +1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:49:36) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	k = 0
	if i % 3 ==0:		
		k= k + 1
		print(k)
v1 = zeros(k,dtype=int)
for j in v:
	j = j +1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:50:02) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	k = 0
	if i % 3 ==0:		
		k= k + 1
		print(k)
v1 = zeros(k,dtype=int)
for j in v:
	j = j +1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:50:20) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	k = 0
	if i % 3 ==0:		
		k= k + 1
		print(k)
v1 = zeros(k,dtype=int)
for j in v:
	v1[i] = v1[i] +1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:50:53) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	k = 0
	if i % 3 ==0:		
		k= k + 1
		print(k)
v1 = zeros(k,dtype=int)
l = 0
for l in v:
	l = l +1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:51:12) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	k = 0
	if i % 3 ==0:		
		k= k + 1
		print(k)
v1 = zeros(k,dtype=int)
l = 0
for l in v:
	v1[i] = v1[i] +1
print()	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:51:16) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	k = 0
	if i % 3 ==0:		
		k= k + 1
		print(k)
v1 = zeros(k,dtype=int)
l = 0
for l in v:
	v1[i] = v1[i] +1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:07) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	k = 0
	if i % 3 ==0:		
		k= k + 1
		print(k)
v1 = zeros(k,dtype=int)
l = 0
for l in v:
	v1[i] = v1[i] +1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:17) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	k = 0
	if i % 3 ==0:		
		k= k + 1
		print(k)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:37) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	if i % 3 ==0:		
		k = 0
		k= k + 1
		print(k)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:49) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in v:
	if i % 3 ==0:		
		k = 0
		
		print(k)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:11) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in range(size(v)):
	if i % 3 ==0:		
		k = k + 1
		
		print(k)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:20) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in range(size(v)):
	if i % 3 ==0:		
		k =0
		k = k + 1
		
		print(k)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:31) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in range(size(v)):
	if i % 3 ==0:		
		k =0
		k = k + 1
print(k)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:22) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in range(size(v)):
	if i % 3 ==0:		
		k =0
		k = k + 1
print(k)
v1 = zeros(k, dtype= int)
for j in v:
	v1[i] = v1[i] + 1
	print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:37) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in range(size(v)):
	if i % 3 ==0:		
		k =0
		k = k + 1
print(k)
v1 = zeros(k, dtype= int)
for j in v:
	j = 0
	j= j + 1
	print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:54:54) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in range(size(v)):
	if i % 3 ==0:		
		k =0
		k = k + 1
print(k)
v1 = zeros(k, dtype= int)
for j in v:
	j = 0
	j= j + 1
	print(v1)
-- EXECUTION TIME:
0.937389
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
4
[5 7 8 9]
---- user output:
1
[0]
[0]
[0]
[0]
[0]
[0]
[0]
[0]
[0]
[0]
[0]
[0]
[0]
-- TEST CASE 2:
---- input:
[15,20,30,15,36,63,25,10,2]
---- correct output:
5
[0 2 3 4 5]
---- user output:
1
[0]
[0]
[0]
[0]
[0]
[0]
[0]
[0]
[0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[3 4 5]
---- user output:
1
[0]
[0]
[0]
[0]
[0]
[0]
[0]
[0]
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:55:03) 
-- CODE:
from numpy import*
v = array(eval(input("Quant. de alunos: ")))

for i in range(size(v)):
	if i % 3 ==0:		
		k =0
		k = k + 1
print(k)
v1 = zeros(k, dtype= int)
for j in v:
	j = 0
	j= j + 1
	print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
